--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -13,8 +13,12 @@ DISTFILES	= TODO client.c decls.h event.c event.h log.c log.h \
 		  network.c queue.h server.c trace.c trace.h utils.c utils.h
 EXPANDCOPYRIGHT	= /usr/site/lib/copyright/expand-copyr
 
-# Set to 1 for "secure frisbee" support.  Requires openssl libraries.
+#
+# Support encrypted and signed-checksumed images.
+# Requires openssl libraries.
+#
 WITH_CRYPTO	= 1
+WITH_SIGNING	= 1
 
 SYSTEM	:= $(shell uname -s)
 
@@ -103,7 +107,10 @@ IUZFLAGS	= -DFRISBEE
 IUZLIBS		= 
 
 ifeq ($(WITH_CRYPTO),1)
-IUZFLAGS	+= -DWITH_CRYPTO -DSIGN_CHECKSUM
+IUZFLAGS	+= -DWITH_CRYPTO
+ifeq ($(WITH_SIGNING),1)
+IUZFLAGS	+= -DSIGN_CHECKSUM
+endif
 IUZLIBS		+= -lcrypto
 endif
 
