Make secure diskload path handle multiple images.
Make sure "tmcd imagekey" returns info for all images.
Make Linux rc.frisbee handle it.

Also: change to elabinelab setup to not load secure image info
into the elabinelab DB (i.e., so we don't propogate the secret keys).

--- a/tbsetup/elabinelab.in
+++ b/tbsetup/elabinelab.in
@@ -856,9 +856,12 @@ sub DumpDBGoo()
 
     #
     # Initial images; note that these images are not going to exist inside!
+    # Note that we exclude any encrypted images because we cannot expose
+    # the encryption keys that they would need to decode the images!
     # 
     DBQueryWarn("select * from images ".
-		"where pid='$pid' or (pid='$TBOPSPID' and global=1) ".
+		"where (pid='$pid' or (pid='$TBOPSPID' and global=1)) ".
+		"  and decryption_key is null ".
 		"into outfile '$statedir/images'")
 	or die("*** $0:\n".
 	       "    Could not dump table images\n");
