When forcing a transition to a new opMode, look for a valid next state.
Previously, a forced opModeTransition would just remain in the same state
after moving to the new op_mode rather than looking for a valid
oldmode/oldstate => newmode/newstate transition in the mode_transitions
table. This should only effect the transition from SECUREBOOT/TPMSIGNOFF,
since all other uses should not find a valid newstate and should remain in
the old state as before.

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -969,7 +969,11 @@ sub opModeTransition($$;$) {
     $mode     = $nodes{$node}{mode};
 
     if (defined($modeTrans{"$mode:$oldstate"}) || $force) {
-	if (!$force) {
+	#
+	# If there is a next state associated with mode:oldstate, use it.
+	# Otherwise we just remain in the old state.
+	#
+	if (defined($modeTrans{"$mode:$oldstate"})) {
 	    debug("Mode Transition check:\n");
 	    my $translist = join(",",@{$modeTrans{"$mode:$oldstate"}});
 	    #debug("translist=$translist\n");
@@ -981,7 +985,10 @@ sub opModeTransition($$;$) {
 	    }
 	    if (defined($trans{$newmode})) {
 		$nextstate=$trans{$newmode};
-	    } else {
+		if ($force) {
+		    info("$node: opMode force changing state along with mode\n");
+		}
+	    } elsif (!$force) {
 		notify("Invalid mode transition for $node from ".
 		       "$mode/$oldstate to $newmode!\n");
 	    }
