--- a/db/EmulabConstants.pm.in
+++ b/db/EmulabConstants.pm.in
@@ -95,7 +95,7 @@ use vars qw(@ISA @EXPORT);
 	 TBDB_NODESTATE_PXEBOOTING TBDB_NODESTATE_ALWAYSUP
 	 TBDB_NODESTATE_MFSSETUP TBDB_NODESTATE_TBFAILED
 	 TBDB_NODESTATE_POWEROFF TBDB_NODESTATE_SECVIOLATION
-         TBDB_NODESTATE_TPMSIGNOFF
+         TBDB_NODESTATE_GPXEBOOTING TBDB_NODESTATE_TPMSIGNOFF
 
 	 TBDB_NODEOPMODE_NORMAL TBDB_NODEOPMODE_DELAYING
 	 TBDB_NODEOPMODE_UNKNOWNOS TBDB_NODEOPMODE_RELOADING
@@ -405,6 +405,7 @@ sub TBDB_NODESTATE_PXEWAKEUP()	{ "PXEWAKEUP"; }
 sub TBDB_NODESTATE_PXEFAILED()	{ "PXEFAILED"; }
 sub TBDB_NODESTATE_PXEBOOTING()	{ "PXEBOOTING"; }
 sub TBDB_NODESTATE_POWEROFF()	{ "POWEROFF"; }
+sub TBDB_NODESTATE_GPXEBOOTING(){ "GPXEBOOTING"; }
 sub TBDB_NODESTATE_TPMSIGNOFF() { "TPMSIGNOFF"; }
 sub TBDB_NODESTATE_SECVIOLATION(){ "SECVIOLATION"; }
 sub TBDB_NODESTATE_MFSBOOTING() { "MFSBOOTING"; }
