Make sure nodessh script works in a world with DISABLE_NAMED_SETUP.

--- a/configure.in
+++ b/configure.in
@@ -296,6 +296,7 @@ NFSTRACESUPPORT=0
 TBLOGFACIL="local5"
 BOSSEVENTPORT=16505
 UNIFIED_BOSS_AND_OPS=0
+DISABLE_NAMED_SETUP=0
 FRISEBEEMCASTADDR="234.5.6"
 FRISEBEEMCASTPORT=3564
 FRISEBEENUMPORTS=0
